# Analysis-Alpaca-Researcher

./: README.md
analysis_alpaca/: .env.example  .gitignore  Makefile  http_server.py  pyproject.toml  requirements.txt  setup.py
analysis_alpaca/src/analysis_alpaca/: __init__.py  config.py
analysis_alpaca/src/analysis_alpaca/core/: __init__.py  research_service.py  server.py
analysis_alpaca/src/analysis_alpaca/exceptions/: __init__.py  base.py
analysis_alpaca/src/analysis_alpaca/models/: __init__.py  research.py
analysis_alpaca/src/analysis_alpaca/search/: __init__.py  academic_search.py  base.py  content_extractor.py  web_search.py
analysis_alpaca/src/analysis_alpaca/utils/: __init__.py  logging.py  text.py
analysis_alpaca/tests/: __init__.py  conftest.py  test_models.py  test_utils.py
analysis_alpaca/web_ui/: README.md
analysis_alpaca/web_ui/backend/: .env.example  main.py
analysis_alpaca/web_ui/frontend/: .env.example  package-lock.json  package.json
analysis_alpaca/web_ui/frontend/public/: index.html
analysis_alpaca/web_ui/frontend/src/: App.css  App.js  index.css
analysis_alpaca/web_ui/frontend/src/components/: Header.js  JobsList.js  ResearchForm.js  ResearchResults.js
analysis_alpaca/web_ui/frontend/src/services/: api.js
