[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-alpaca"
version = "1.0.0"
authors = [
    {name = "AnalysisAlpaca Team", email = "contact@example.com"},
]
description = "MCP server for comprehensive research and analysis capabilities"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "mcp>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
ai = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "groq>=0.4.0",
]

[project.scripts]
analysis-alpaca = "analysis_alpaca.core.server:run_server"

[project.urls]
Homepage = "https://github.com/DeepKariaX/Analysis-Alpaca-Researcher"
Repository = "https://github.com/DeepKariaX/Analysis-Alpaca-Researcher.git"
Issues = "https://github.com/DeepKariaX/Analysis-Alpaca-Researcher/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
analysis_alpaca = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=analysis_alpaca --cov-report=term-missing"
testpaths = [
    "tests",
]
asyncio_mode = "auto"